# SocoIOT

./: .gitignore  CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  LEDs.cpp  LEDs.h  SdConfData.cpp  SdConfData.h  SuperSocoParser.cpp  SuperSocoParser.h  ble.cpp  buttons.cpp  buttons.h  crypto_consts.h  font8x16.h  lcd_fc.cpp  lcd_fc.h  lwip_iot.cpp  lwip_iot.h  lwipopts.h  main.cpp  readme.md  sd.c  sd.h  sd_hw.c  st7789.c  uart_dma.c  uart_dma.h
binary/: SocoIOT.uf2
